--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -17,6 +17,8 @@
         <members>FieldChangeQueueable_Test</members>
         <members>FieldChangeRelationUtility</members>
         <members>FieldChangeTestUtility</members>
+        <members>NebulaLoggerWrapper</members>
+        <members>NebulaLoggerWrapper_Test</members>
         <members>RecordCompareUtility</members>
         <members>TestDataFactory</members>
         <members>TestEventFactory</members>
